--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: rouge
 #mardown: redcarpet
 
+encoding: utf-8
+
 safe: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
@@ -28,7 +30,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://solidblack.github.io/
+production_url : http://solidblack.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -57,7 +59,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : /
+  BASE_PATH : /solidblack.github.io
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
